# DjangoPr-Public-

./: memo.txt  pyproject.toml  readme.md  test.py
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: settings.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_detail_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py
medias/: models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py
reviews/: models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_descriptions.py  0003_alter_amenity_options_amenity_created_at_and_more.py  0004_alter_amenity_created_at_alter_amenity_updated_at_and_more.py  0005_room_category.py  0006_alter_room_amenities_alter_room_category_and_more.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  (+2 more)
wishlists/: admin.py  models.py
(+2 files in other folders)
